--- a/index.html
+++ b/index.html
@@ -97,25 +97,25 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>PlaceHolder</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>PlaceHolder.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>PlaceHolder.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>PlaceHolder.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
@@ -152,12 +152,7 @@
 								</ul>
 							</form>
 							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
 								</li>
-								<li class="icon solid fa-phone">(44) 07958125233</li>
 								<li class="icon solid fa-envelope"><a href="#">elliottrjackson5@gmail.com</a></li>
 								<li class="icon brands fa-twitter"><a href="#">https://twitter.com/Elliott21092640</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">https://www.facebook.com/elliott.jackson.7927</a></li>
