--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 								<li class="icon brands fa-github"><a href="#">https://github.com/Elliottrjackson5</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy;Elliott Jackson 2019</li>
 							</ul>
 						</div>
 					</section>
