--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Elliott Jackson</h2>
-							<p>My portfolio by <a href="http://html5up.net">HTML5 UP</a></p>
+							<p>My portfolio</p>
 						</div>
 					</section>
 
@@ -153,14 +153,14 @@
 							</form>
 							<ul class="contact">
 								</li>
-								<li class="icon solid fa-envelope"><a href="#">elliottrjackson5@gmail.com</a></li>
-								<li class="icon brands fa-twitter"><a href="#">https://twitter.com/Elliott21092640</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">https://www.facebook.com/elliott.jackson.7927</a></li>
-								<li class="icon brands fa-instagram"><a href="#">https://www.instagram.com/elliottjackson5/</a></li>
-								<li class="icon brands fa-github"><a href="#">https://github.com/Elliottrjackson5</a></li>
+								<li class="icon solid fa-envelope"><a href=>elliottrjackson5@gmail.com</a></li>
+								<li class="icon brands fa-twitter"><a href=>https://twitter.com/Elliott21092640</a></li>
+								<li class="icon brands fa-facebook-f"><a href=>https://www.facebook.com/elliott.jackson.7927</a></li>
+								<li class="icon brands fa-instagram"><a href=>https://www.instagram.com/elliottjackson5/</a></li>
+								<li class="icon brands fa-github"><a href=>https://github.com/Elliottrjackson5</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy;Elliott Jackson 2019</li>
+								<li>Elliott Jackson 2019</li>
 							</ul>
 						</div>
 					</section>
