--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/Pac_Man.png" alt="" /></a>
+									<a href="#" class="image"><img src="images/Pac_Man.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Pacman</h2>
 										<p>Pacman Description</p>
